@@ -24,8 +24,13 @@
 #endif
 
 #include <stdio.h>
+
 #ifdef HAVE_STDLIB_H
 #include <stdlib.h>
+#endif
+
+#ifdef HAVE_STRING_H
+#include <string.h>
 #endif
 
 #include <libxfce4util/libxfce4util.h>
