@@ -1,3 +1,8 @@
+2008-09-09	Jannis Pohlmann <jannis@xfce.org>
+
+	* libxfce4mixer/, panel-plugin/, xfce4-mixer/: Fix a lot of compiler
+	  warnings and return statements without a return value.
+
 2008-09-03	Jannis Pohlmann <jannis@xfce.org>
 
 	* libxfce4mixer/xfce-mixer-card-combo.{c,h}: Remove the method
